# webrana-ai-proxy

./: .gitignore  .postman.json  FINAL_CHECKPOINT_REPORT.md  LOAD_TEST_SUMMARY.md  README.md  WEEK3_COMPLETION_SUMMARY.md
backend/: .env.example  Cargo.toml
backend/migrations/: 20241209001_create_users.sql  20241209002_create_api_keys.sql  20241209003_create_proxy_api_keys.sql  20241209004_create_proxy_requests.sql  20241209005_create_subscriptions.sql  20241209006_create_invoices.sql  20241210001_create_onboarding_progress.sql  20241210002_create_analytics_events.sql
backend/proptest-regressions/services/transformers/: property_tests.txt
backend/src/: main.rs
backend/src/middleware/: admin.rs  auth.rs  mod.rs  rate_limit.rs  security_headers.rs
backend/src/models/: api_key.rs  mod.rs  proxy_api_key.rs  proxy_request.rs  user.rs
backend/src/routes/: admin.rs  api_keys.rs  auth.rs  billing.rs  mod.rs  proxy.rs  usage.rs
backend/src/services/: analytics_service.rs  api_key_service.rs  auth_service.rs  billing_property_tests.rs  billing_service.rs  email_service.rs  invoice_service.rs  mod.rs  onboarding_property_tests.rs  onboarding_service.rs  proxy_key_service.rs  proxy_service.rs  rate_limiter.rs  scheduler_service.rs  stream_handler.rs  usage_analytics.rs  usage_logger.rs
backend/src/services/transformers/: anthropic.rs  google.rs  mod.rs  property_tests.rs  qwen.rs
backend/src/utils/: encryption.rs  mod.rs  password.rs
docs/: API_KEY_MVP_SCOPE.md  AWS_INFRASTRUCTURE.md  DEPLOYMENT_SETUP_GUIDE.md  EXECUTIVE_DECISION_BRIEF.md  HOTFIX_PROCEDURE.md  (+13 more)
(+104 files in other folders)
