[package]
name = "webrana-backend"
version = "0.1.0"
edition = "2021"
description = "Webrana AI Proxy - Backend API Server"
authors = ["Webrana Team"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Encryption & Security
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"

# JWT
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for proxying)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Streaming
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"

# Environment
dotenvy = "0.15"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
